--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.5",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
